tests/error/undefined_name.ca

f = ->
  add(a b c)

vm = make_vm(f)
vm.call
assert(vm.has_error)
